# qaa-analysis

./: .coverage  .gitignore  CLAUDE.md  README.md  check_feature_status.py  phase2_discovery_results.json  pyproject.toml  repomix.config.json  verify_output.py
.cursor/rules/: banner.mdc  comment-banner.mdc  file-header.mdc  global-variables.mdc  rich.mdc  run_commands.mdc  testing.mdc  tree.mdc  useful-repo.mdc
.notes/: Architect_v1.md  Architect_v2.md  Engineer_v1.md  Rules_Generator.md  __commands__.md
.project/: CHECKLIST.md  PLAN.md  PROJECT_OVERVIEW.md
.project/other/: CLAUDE-response.md  PLAN.md  QUESTION.txt
.project/sessions/: Session-summary-1.txt
data-dictionary/: DATA_DICTIONARY.md  defi_app_contracts.csv  event_selectors.csv  factory_registry.csv  token_metadata.csv
docs/: REV_Definition_and_Calculation.md  ethereum_dataset_documentation.md
docs/Queries/: basic_rev_etl_query.md
examples/: core_modules_example.py  demo_join_fix.py
notebook/: analyze_data.py  check_parquet_schema.py
scripts/: README.md  run_etl.ps1  run_tests.ps1  verify_rev_implementation.py
src/qaa_analysis/: config.py  etl.py  metadata_explorer.py
src/qaa_analysis/address-mapping/: defi_contract_map.json  full_contract_map.json
src/qaa_analysis/cache/: __init__.py  query_cache.py
src/qaa_analysis/contract_universe/: README.md  __init__.py  action_mapping.py  config.py  eth_client.py  phase3_demo.py  test_phase3.py  volume_discovery.py
src/qaa_analysis/etl/: __init__.py  basic_rev_etl.py  cost_aware_client.py  interaction_etl.py
src/qaa_analysis/feature_engineering/: BEHAVIORAL_ANALYSIS_README.md  PHASE_2_4_PLAN.md  README.md  __init__.py  (+21 more)
tests/: test_basic_rev_etl.py  test_config.py  test_cost_aware_client.py  test_query_cache.py  test_rev_queries.py
(+55 files in other folders)
